--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEVf94Ms4zU3K8KE7zCtBTYg53y_BNe-0"></script>
 </head>
 <body>
   <app-root></app-root>
